[ServiceWorker] Make ServiceWorkerRegistration#update() resolve to a registration object

To follow the spec, this CL lets ServiceWorkerRegistration#update()
resolve to a registration object (actually the ServiceWorkerRegistration
object itself) rather than undefined before.

Entry on the feature dashboard:
https://www.chromestatus.com/feature/5436747060084736

BUG=836217

Change-Id: I090d896e541e76143baa29d0b9d175a54e04ef2e
Reviewed-on: https://chromium-review.googlesource.com/1100736
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Commit-Queue: Han Leon <leon.han@intel.com>
Cr-Commit-Position: refs/heads/master@{#567908}
Former-commit-id: ce3c472e9aa5f8f85e21d013a29d1c291853505c