content/renderer/service_worker/web_service_worker_registration_impl.cc
@@ -150,21 +150,8 @@ WebServiceWorkerRegistrationImpl::UpdateViaCache() const {
 
 void WebServiceWorkerRegistrationImpl::Update(
     std::unique_ptr<WebServiceWorkerUpdateCallbacks> callbacks) {
-  host_->Update(base::BindOnce(
-      [](std::unique_ptr<WebServiceWorkerUpdateCallbacks> callbacks,
-         blink::mojom::ServiceWorkerErrorType error,
-         const base::Optional<std::string>& error_msg) {
-        if (error != blink::mojom::ServiceWorkerErrorType::kNone) {
-          DCHECK(error_msg);
-          callbacks->OnError(blink::WebServiceWorkerError(
-              error, blink::WebString::FromUTF8(*error_msg)));
-          return;
-        }
-
-        DCHECK(!error_msg);
-        callbacks->OnSuccess();
-      },
-      std::move(callbacks)));
+  host_->Update(base::BindOnce(&WebServiceWorkerRegistrationImpl::OnUpdated,
+                               this, std::move(callbacks)));
 }
 
 void WebServiceWorkerRegistrationImpl::Unregister(
@@ -319,6 +306,19 @@ WebServiceWorkerRegistrationImpl::GetOrCreateServiceWorkerObject(
                          ->GetOrCreateServiceWorkerObject(std::move(info));
   }
   return service_worker;
+}
+
+void WebServiceWorkerRegistrationImpl::OnUpdated(
+    std::unique_ptr<WebServiceWorkerUpdateCallbacks> callbacks,
+    blink::mojom::ServiceWorkerErrorType error,
+    const base::Optional<std::string>& error_msg) {
+  if (error != blink::mojom::ServiceWorkerErrorType::kNone) {
+    callbacks->OnError(blink::WebServiceWorkerError(
+        error, blink::WebString::FromUTF8(*error_msg)));
+    return;
+  }
+  callbacks->OnSuccess(WebServiceWorkerRegistrationImpl::CreateHandle(
+      base::WrapRefCounted(this)));
 }
 
 void WebServiceWorkerRegistrationImpl::SetVersionAttributes(
